tests/forof/forof.exp
Error ------------------------------------------------------------- forof.js:7:6

Cannot cast `x` to string because number is incompatible with string.


Error ------------------------------------------------------------ forof.js:13:6

Cannot cast `x` to string because number is incompatible with string.


Error ------------------------------------------------------------ forof.js:25:6

Cannot cast `x` to number because string is incompatible with number.


Error ------------------------------------------------------------ forof.js:32:6

Cannot cast `elem` to number because tuple type is incompatible with number.


Error ------------------------------------------------------------ forof.js:39:6

Cannot cast `elem` to number because tuple type is incompatible with number.


Error ------------------------------------------------------------ forof.js:45:6

Cannot cast `x` to number because string is incompatible with number.



Found 6 errors
